# coding: utf-8
[metadata]
name = tempsdb
version = 0.6.6
long_description = file: README.md
long_description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = Embedded Cython database for time series that you need to send somewhere
url = https://git.dms-serwis.com.pl/smokserwis/tempsdb
project_urls =
    Documentation = https://smokserwis.docs.smok.co/tempsdb
    Changelog = https://git.dms-serwis.com.pl/smokserwis/tempsdb/-/blob/develop/CHANGELOG.md
    Code = https://git.dms-serwis.com.pl/smokserwis/tempsdb
    Issue tracker = https://git.dms-serwis.com.pl/smokserwis/tempsdb/-/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Topic :: Database

[options]
install_requires =
    satella>=2.17.7
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,!=3.6.*,!=3.7.*
packages = find:
zip_safe = True

[options.extras_require]
FasterJSON = ujson
FasterMetadata = minijson

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100
